--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -20,8 +20,7 @@
     "-\tPie Chart was generated to understand the Male vs Female counts, both genders are represented almost equally in the experiments.\n",
     "-\tBox and Whisker chart was generated to understand the final tumor value distribution for each drug regimen and if there are outliers for each drug regimen.\n",
     "-\tA Line Plot of Tumor Value vs Time for one single mouse treated with the drug of interest was generated, showing the Tumor Volume is decreasing with treatment overtime. \n",
-    "-\tFinally, a correlations chart of mouse weight vs average observed tumor volume was plotted for the entire Capomulin regimen; which produced a strong correlation value of 0.84.\n",
-    " "
+    "-\tFinally, a correlations chart of mouse weight vs average observed tumor volume was plotted for the entire Capomulin regimen; which produced a strong correlation value of 0.84."
    ]
   },
   {
