--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "carcinoma (SCC) was analyzed. The purpose of this analysis was to compare the performance of Capomulin, Pymaceuticals' drug of interest, against other treatment medicine. \n",
+    "In this challenge potential treatments for carcinoma (SCC) were analyzed. 249 lab mice with SCC received treament with a range of drug specimens. The purpose of this analysis was to compare the performance of Capomulin, Pymaceuticals' drug of interest, against other treatment medicine. \n",
     "\n",
     "The analysis started with compiling all the data available together and eliminating duplicates in the data that could skew the results. \n",
     "A summary table of mean, median, variance, standard deviation, and SEM for each drug was generated to understand the central tendencies of the tumor volumes for each drug (how dispersed and spread of data is from the mean). In this table we can see that our drug of interest has one of the lowest variances (aside from Ramicane), std variance which suggests that the dataset is not as dispersed as the rest, and one of the lowest SEM values which would suggest an increased reliability and precision the sample data to be to the population data. \n",
